<resources>
    <!-- General App -->
    <string name="app_name">Demo App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_bar_title">Navigation Bar</string>
    <string name="sign_out">Sign Out</string>

    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="first_name_field">First Name</string>
    <string name="last_name_field">Last Name</string>
    <string name="username_field">Username</string>
    <string name="no_permission">You do not have permission to view this data.</string>

    <!-- Sign in page -->
    <string name="sign_in">Sign in</string>

    <!-- Create account page -->
    <string name="create_account_title">Create your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="account_type">Account Type</string>
    <string name="sign_in_link">Already have an account? Sign in</string>

    <string-array name="role_items">
        <item>Select account type…</item>
        <item>Parent</item>
        <item>Provider</item>
    </string-array>

    <!-- Medicine log page -->
    <string name="med_log_header">Medicine Log</string>
    <string name="med_inventory_header">Inventory</string>
    <string name="med_log_card_doses"># doses</string>
    <string name="med_expired_alert">Medicine expired</string>
    <string name="med_low_alert">Medicine flagged as low stock</string>
    <string name="med_replace_alert">Medicine need replacement</string>
    <string name="controller_med">Controller</string>
    <string name="rescue_med">Rescue</string>
    <string name="med_inventory_amount">#/# Puffs</string>
    <string name="date_placeholder">DD/MM/YYYY</string>

    <string name="child_popup_message">
        Smart Air helps you take care of your asthma.\n
        You’ll learn the difference between your two medicines:\n
        - Rescue inhaler – for quick relief when you feel symptoms.\n
        - Controller inhaler – use it every day to keep your lungs calm.\n\n
        Your information is private — only you and your parent can see it.\n
        If your parent chooses, they can share a summary with your doctor.
    </string>

    <string name="parent_popup_message">
        Smart Air helps your child track asthma symptoms, medicine use, and inhaler technique.\n
        You can link all your children and view their progress in one place.\n
        You control what’s shared:\n
        - By default, nothing is shared with a provider.\n
        - You can enable or disable sharing at any time for each data type (rescue logs, symptoms, triggers, etc.).\n
        - To give a provider access, send a one-time invite code or export a report — both can be revoked anytime.
    </string>

    <string name="provider_popup_message">
        Smart Air lets you view parent-approved summaries of a child’s asthma progress.\n
        - You’ll see only the information the parent chooses to share, such as logs, trends, or triage reports.\n
        - You have read-only access — no data can be edited or added.\n
        - Parents can update or revoke your access in real time.
    </string>

    <string name="add_medication_message">
        Please add your medications to track usages\n
        through your parent.
    </string>

    <string name="home">Home</string>
    <string name="symptom">Symptom</string>
    <string name="badge">Badge</string>
    <string name="profile">Profile</string>
    <string name="sharing_settings">Sharing Settings</string>
    <string name="share_symptoms">Share Symptoms</string>
    <string name="share_medicines">Share Medicines</string>
    <string name="share_pef">Share PEF</string>
    <string name="share_triage">Share Triage</string>
    <string name="save_settings">Save Settings</string>

</resources>
