<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView android:id="@+id/tv_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharing_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_symptoms"
            android:layout_marginTop="8dp"/>

        <Switch android:id="@+id/switch_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_medicines"
            android:layout_marginTop="8dp"/>

        <Switch android:id="@+id/switch_medicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_pef"
            android:layout_marginTop="8dp"/>

        <Switch android:id="@+id/switch_pef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_triage"
            android:layout_marginTop="8dp"/>

        <Switch android:id="@+id/switch_triage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button android:id="@+id/btn_save_sharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>